Rebase home and work branches Move contact form into accordion Fix footer issues on mobile Fix button issue on ios using role instead of type on <a> buttons Adjust site logo size on small devices Adjust admin logon logo

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -14,6 +14,9 @@ h5 {
 */
 
 .navbar-brand img {
+  max-width: 86px;
+  max-height: 37px;
+  z-index: -1;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -337,6 +340,7 @@ div.mailpoet_form_below_posts {
   border-radius: 0.25rem;
   margin: 3rem auto;
 }
+
 @include media-breakpoint-up(md) {
   #mp_form_below_posts1 {
     width: 70% !important;
@@ -382,6 +386,10 @@ div.mailpoet_form_below_posts {
 @include media-breakpoint-up(md) {
   .hero-image {
     background-position: center;
+  }
+  .navbar-brand img {
+    max-width: 100%;
+    max-height: 100%;
   }
   .back-to-top {
     bottom: 15px;
@@ -505,7 +513,7 @@ div.mailpoet_form_below_posts {
   & ul {
     padding: 0;
     margin: 0 0 0.7em;
-    list-style: none;  
+    list-style: none;
   }
 
   & ul li {
