--- a/style.css
+++ b/style.css
@@ -4440,7 +4440,7 @@ textarea.form-control-lg {
   }
 }
 .accordion-button:not(.collapsed) {
-  color: #0c63e4;
+  color: #147b80;
   background-color: #e7f1ff;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
@@ -4469,9 +4469,9 @@ textarea.form-control-lg {
 }
 .accordion-button:focus {
   z-index: 3;
-  border-color: #86b7fe;
+  border-color: #d2f6f8;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(22, 137, 142, 0.5);
 }
 
 .accordion-header {
@@ -11042,6 +11042,9 @@ h5,
 ------------------------------------------------------------
 */
 .navbar-brand img {
+  max-width: 86px;
+  max-height: 37px;
+  z-index: -1;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -11554,6 +11557,11 @@ div.mailpoet_form_below_posts {
 @media (min-width: 768px) {
   .hero-image {
     background-position: center;
+  }
+
+  .navbar-brand img {
+    max-width: 100%;
+    max-height: 100%;
   }
 
   .back-to-top {
